# linux-monitor

./: .gitignore  CMakeLists.txt
display_monitor/: CMakeLists.txt  cpu_load_model.cpp  cpu_load_model.h  cpu_softirq_model.cpp  cpu_softirq_model.h  cpu_stat_model.cpp  cpu_stat_model.h  main.cpp  mem_model.cpp  mem_model.h  monitor_inter.cpp  monitor_inter.h  monitor_widget.cpp  monitor_widget.h  net_model.cpp  net_model.h
proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  monitor_info.proto
rpc_manager/client/: main.cpp  rpc_client.cpp  rpc_client.h
rpc_manager/server/: main.cpp  rpc_manager.cpp
test_monitor/include/monitor/: cpu_load_monitor.h  cpu_softirq_monitor.h  cpu_stat_monitor.h  mem_monitor.h  monitor_inter.h  net_monitor.h
test_monitor/include/utils/: read_file.h  utils.h
test_monitor/src/: CMakeLists.txt  main.cpp
test_monitor/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  mem_monitor.cpp  net_monitor.cpp
test_monitor/src/utils/: read_file.cpp
